--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "http-status-codes": "^1.4.0",
+    "swagger-ui-express": "^4.1.4",
     "winston": "^3.2.1",
     "winston-loggly-bulk": "^3.1.0"
   }
