Add created and updated date in employee model

--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "swagger-ui-express": "^4.1.4",
     "winston": "^3.2.1",
     "winston-loggly-bulk": "^3.1.0"
+  },
+  "engines": {
+    "node": "10.x"
   }
 }
